# Ceneopinion

./: .eslintrc.js  .gitignore  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js  webpack.common.js  webpack.config.dev.js  webpack.config.js
src/: app.py  helpers.py
src/dev/css/: _common.scss  charts.scss  extract.scss  index.scss  product_details.scss
src/dev/ts/: about.tsx  charts.tsx  common.tsx  extract.tsx  index.tsx  list.tsx  product_details.tsx  tsconfig.json
src/dev/ts/about/: App.tsx
src/dev/ts/charts/: App.tsx
src/dev/ts/common/: Navbar.tsx  NavbarButton.tsx  ProductCard.tsx  Stars.tsx
src/dev/ts/components/: App.tsx
src/dev/ts/extract/: App.tsx  Component.tsx
src/dev/ts/index/: App.tsx  Content.tsx  Header.tsx  Mono.tsx
src/dev/ts/list/: App.tsx
src/dev/ts/product_details/: AnimatedEllipsis.tsx  App.tsx  DataRow.tsx  FilteringOptions.tsx  HeaderRow.tsx  ProductGallery.tsx  ProductShowcase.tsx  ReviewsTable.tsx  Spinner.tsx  Stars.tsx
src/static/css/: about.css  charts.css  extract.css  index.css  list.css  product_details.css
src/static/js/: about.js  charts.js  extract.js  index.js  list.js  product_details.js
src/static/templates/: index.html
